# print-gcc-switches

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix
src/: main.c  process_elf.c  process_elf.h  process_elf_impl.c
